tests/lean/248.lean
@[implementedBy foo] constant foo (x : Nat) : Nat
